seo image changed, some spacings and scrollbar for firefox fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,12 +11,12 @@ html {
 /* Firefox */
 * {
   scrollbar-width: 0;
-  scrollbar-gutter: 0;
 }
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
   width: 0;
+  display: none;
 }
 body::-webkit-scrollbar {
   display: none;
@@ -26,7 +26,7 @@ body::-webkit-scrollbar {
 /* General stylings */
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   color: antiquewhite;
   scrollbar-width: 0;
 }
